# memory-allocator

./: Cargo.toml
src/: main.rs  memory_allocator.rs  memory_replacement.rs
tests/: cli.rs
tests/snapshots/: cli__prints_valid_fifo-2.snap  cli__prints_valid_fifo.snap  cli__prints_valid_lru.snap  cli__prints_valid_opt.snap  cli__prints_valid_opt_2.snap
