[package]
name = "memory-replacement"
version = "0.1.0"
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0.40"
prettytable-rs = "^0.8"
colored = "2"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
insta = "1.7.1"